<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Edit_Personal_Details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageprofile_image"
                    android:layout_width="match_parent"
                    android:layout_height="148sp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile"
                    android:layout_marginBottom="12sp"/>

                <!--<ImageView-->
                    <!--android:id="@+id/editprofile_image"-->
                    <!--android:layout_width="48sp"-->
                    <!--android:layout_height="48sp"-->
                    <!--android:src="@drawable/addicon"-->
                    <!--android:layout_alignParentRight="true"/>-->

            </RelativeLayout>

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/PersonalDetails"-->
                <!--android:gravity="center"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="18sp"/>-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36sp"
                android:orientation="horizontal"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="12sp"
                android:weightSum="6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textSize="18sp"
                    android:layout_weight="3"/>
                <Spinner
                    android:id="@+id/dateSpinnerDropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/monthSpinnerDropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/yearSpinnerDropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36sp"
                android:orientation="horizontal"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="12sp"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
                <Spinner
                    android:id="@+id/genderSpinnerDropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_weight="2"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"/>
            </android.support.design.widget.TextInputLayout>

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/aadhar_edittext"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hintAnimationEnabled="true"-->
                <!--app:counterEnabled="true"-->
                <!--app:counterMaxLength="12">-->

                <!--<android.support.design.widget.TextInputEditText-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/aadharnumber"-->
                    <!--android:textSize="18sp"-->
                    <!--android:inputType="number"-->
                    <!--android:maxLength="12"/>-->

            <!--</android.support.design.widget.TextInputLayout>-->



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="12sp"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maritialstatus"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
                <Spinner
                    android:id="@+id/maritialSpinnerDropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_weight="2"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hometown_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hometown"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pincode_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="6"
                app:counterEnabled="true"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/permanentAddress_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/permanentaddress"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/upadate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:text="@string/updatedetails"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>